--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -592,14 +592,16 @@ function recomputeUnitsAndRate() {
   // aggiorna campo hidden Units
   unitsInput.value = units ? units.toFixed(2) : '';
 
-  // calcola Coach Rate effettiva
-  const baseRateTotal = parseFloat(hourlyRateInput.dataset.baseRate || '0');
-  const attendees = parseInt(hourlyRateInput.dataset.attendees || '1', 10) || 1;
-  const perStudentBase = attendees > 0 ? (baseRateTotal / attendees) : baseRateTotal;
-  const effectiveRate = perStudentBase * units;
+// calcola Coach Rate effettiva (per studente)
+const perStudentBase = attendees > 0 ? (baseRateTotal / attendees) : baseRateTotal;
+const effectiveRatePerStudent = perStudentBase * units;
 
-  // aggiorna il campo visibile Coach Rate
-  hourlyRateInput.value = effectiveRate > 0 ? effectiveRate.toFixed(2) : '';
+// valore da mostrare = totale gruppo
+const effectiveRateTotal = effectiveRatePerStudent * attendees;
+
+// aggiorna il campo visibile Coach Rate
+hourlyRateInput.value = effectiveRateTotal > 0 ? effectiveRateTotal.toFixed(2) : '';
+
 
   updateFormState();
 }
