--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -157,6 +157,25 @@
     <h1 class="text-3xl font-bold text-gray-800">Call History</h1>
     <p class="mt-2 text-gray-500">Your logged calls</p>
   </div>
+  <div class="mb-4">
+  <label for="historyMonth" class="mr-2 font-medium">Filter by month:</label>
+  <select id="historyMonth" class="form-input w-auto inline-block">
+    <option value="all">All</option>
+    <option value="0">January</option>
+    <option value="1">February</option>
+    <option value="2">March</option>
+    <option value="3">April</option>
+    <option value="4">May</option>
+    <option value="5">June</option>
+    <option value="6">July</option>
+    <option value="7">August</option>
+    <option value="8">September</option>
+    <option value="9">October</option>
+    <option value="10">November</option>
+    <option value="11">December</option>
+  </select>
+</div>
+
   <div class="overflow-x-auto">
     <table class="min-w-full border border-gray-200 rounded-xl">
       <thead class="bg-gray-100">
@@ -236,6 +255,8 @@
   const callHistorySection = document.getElementById('callHistorySection');
 const callHistoryTableBody = document.getElementById('callHistoryTableBody');
 const backFromCallHistoryBtn = document.getElementById('backFromCallHistoryBtn');
+const historyMonthSelect = document.getElementById('historyMonth');
+
 
 const reportCardsSection = document.getElementById('reportCardsSection');
 const reportCardsList = document.getElementById('reportCardsList');
@@ -393,15 +414,16 @@ viewCallLogBtn.addEventListener('click', async () => {
     if (resp.success && resp.history.length) {
       callHistoryTableBody.innerHTML = '';
       resp.history.forEach(h => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td class="border px-4 py-2">${h.date}</td>
-          <td class="border px-4 py-2">${h.studentId || ''}</td>
-          <td class="border px-4 py-2">${h.contractId || ''}</td>
-          <td class="border px-4 py-2 text-right">${h.earnings.toFixed(2)}</td>
-        `;
-        callHistoryTableBody.appendChild(row);
-      });
+  const row = document.createElement('tr');
+  row.innerHTML = `
+    <td class="border px-4 py-2">${h.date}</td>
+    <td class="border px-4 py-2">${h.studentId || ''}</td>
+    <td class="border px-4 py-2">${h.productName || h.productId || ''}</td>
+    <td class="border px-4 py-2 text-right">${h.earnings.toFixed(2)}</td>
+  `;
+  callHistoryTableBody.appendChild(row);
+});
+
     } else {
       callHistoryTableBody.innerHTML = '<tr><td colspan="4" class="text-center p-4">No calls logged</td></tr>';
     }
